--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <title>address tag</title>
+    <title>address</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
  </head>
  <body>
