feat:frontend changes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <head>
-    <title>address tag</title>
+    <title>address</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
  </head>
  <body>
+    <h1>frontend changes</h1>
  <h1>Address Tag</h1>
  <h2>Add1</h2>
  <h3>add3</h3>
