--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
  </head>
  <body>
     <h1>frontend changes</h1>
- <h1>Address Tag</h1>
+    <h1>merge conflict:i want this line</h1>
+ <!-- <h1>Address Tag</h1>
  <h2>Add1</h2>
  <h3>add3</h3>
  <h4>add4</h4>
@@ -24,5 +25,5 @@
     teynampet,<br>
     chennai.
  </address></p>
- <hr>
+ <hr> -->
  </body>
