--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
  <body>
     <h1>frontend changes</h1>
     <h1>merge conflict:i want this line</h1>
+    <h1>its important</h1>
  <!-- <h1>Address Tag</h1>
  <h2>Add1</h2>
  <h3>add3</h3>
